--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,5 +1,31 @@
-<nav class="navbar fixed-bottom navbar-light bg-light">
-{%- if site.show-style-guide %}
-    <a href="{{ site.baseurl }}{% link style-guide/index.md %}" class="btn">Style Guide</a>
-{%- endif %}
-</nav>
+<div class="card text-center">
+    <div class="card-header">
+        <p class="footer_text">VOLG ONS!</p>
+    </div>
+    <div class="card-body">
+            <p class="card-text">
+                <a href="https://www.facebook.com"><img src="{{ site.baseurl }}/images/facebook.png" class="icoon" alt="facebook" width="30px"></a>
+                <a href="https://www.instagram.com"><img src="{{ site.baseurl }}/images/instagram.png" class="icoon" alt="instagram" width="30px"></a>
+                <a href="https://twitter.com"><img src="{{ site.baseurl }}/images/twitter.png" class="icoon" alt="twitter" width="30px"></a>
+            </p>
+          </div>
+    <div class="card-body">
+        <div class="row">
+            <div class="col-4">
+                <a href="contact.html" class="">
+                    <p>info@bubbles.be
+                </a>
+            </div>
+            <div class="col-4">
+                <a href="disclaimer.html" class="">
+                    <p>Disclaimer</p>
+                </a>
+            </div>
+            <div class="col-4">
+                <a href="account.html" class="">
+                    <p>Mijn account</p>
+                </a>
+            </div>
+         </div>
+    </div>
+</div>
