--- a/_sass/_bootstrap-variables.scss
+++ b/_sass/_bootstrap-variables.scss
@@ -15,6 +15,6 @@ $primary: $indigo;
 //
 // Font, line-height, and color for body text, headings, and more.
 
-@import url('https://fonts.googleapis.com/css?family=Merriweather');
+@import url('https://fonts.googleapis.com/css?family=Montserrat');
 
-$font-family-base: Merriweather, serif;
+$font-family-base: 'Montserrat', sans-serif;
