--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,6 +1,6 @@
 <div class="card text-center">
     <div class="card-header">
-        <p class="footer_text">VOLG ONS!</p>
+        <p class="footer_text">VOLG ONS</p>
     </div>
     <div class="card-body">
             <p class="card-text">
