--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -9,6 +9,9 @@
         <!-- hoofdnavigatie -->
     
      <div class="collapse navbar-collapse" id="navbarSupportedContent">
+            <a class="navbar-brand" href="index.html">
+                <img src="{{site.baseurl}}/images/bubbles_wit.png" width="120">
+            </a>
         <ul class="navbar-nav mr-auto">
               {% assign links = site.data.navigation %}
               {% for link in links %}
